--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         src="./assets/images/image-web-3-mobile.jpg"
         alt="article-image"
       />
-      <p class="main-article__header">The Bright future of Web 3.0?</p>
+      <p class="main-article__header">The Bright Future of Web 3.0?</p>
       <p class="main-article__text">
         We dive into the next evolution of the web that claims to put the power
         of the platforms back into the hands of the people. But is it really
@@ -48,7 +48,7 @@
         </p>
       </div>
       <div class="article-item">
-        <p class="article-item__header">The downside of AI Artistry</p>
+        <p class="article-item__header">The Downsides of AI Artistry</p>
         <p class="article-item__text">
           What are the possible adverse effects of on-demand AI image
           generation?
@@ -61,26 +61,27 @@
           that means.
         </p>
       </div>
-      <div class="gallery-list">
+    </div>
+    <div class="gallery-list">
         <div class="gallery-item">
           <img class="gallery-item__img" src="./assets/images/image-retro-pcs.jpg" alt="retro-pc-image">
-          <p class="gallery-item__numeration">1</p>
+          <p class="gallery-item__numeration">01</p>
           <p class="gallery-item__header">Reviving Retro PCs</p>
           <p class="gallery-item__text"> What happens when old PCs are given modern upgrades?</p>
         </div>
         <div class="gallery-item">
           <img class="gallery-item__img" src="./assets/images/image-top-laptops.jpg" alt="top-laptops-image">
-          <p class="gallery-item__numeration">2</p>
+          <p class="gallery-item__numeration">02</p>
           <p class="gallery-item__header">Top 10 Laptops of 2022</p>
           <p class="gallery-item__text">Our best picks for various needs and budgets.</p>
         </div>
         <div class="gallery-item">
           <img class="gallery-item__img" src="./assets/images/image-gaming-growth.jpg" alt="gaming-growth-image">
-          <p class="gallery-item__numeration">3<p>
-          <p class="gallery-item__header">Reviving Retro PCs</p>
+          <p class="gallery-item__numeration">03<p>
+          <p class="gallery-item__header">The Growth of Gaming</p>
           <p class="gallery-item__text"> How the pandemic has sparked fresh opportunities.</p>
         </div>
-      </div>
+    </div>
     <script src="./index.js"></script>  
   </body>
 </html>
